@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Contributors to the Eclipse Foundation
+ * Copyright (c) 2023, 2024 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -18,6 +18,7 @@
 package com.sun.enterprise.iiop.security;
 
 import com.sun.corba.ee.spi.ior.IOR;
+import com.sun.corba.ee.spi.orb.ORB;
 import com.sun.corba.ee.spi.presentation.rmi.StubAdapter;
 import com.sun.enterprise.common.iiop.security.SecurityContext;
 import com.sun.enterprise.security.CORBAObjectPermission;
@@ -26,16 +27,9 @@ import com.sun.logging.LogDomains;
 
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
+import jakarta.security.jacc.PolicyFactory;
 
 import java.net.Socket;
-import java.security.AccessController;
-import java.security.CodeSource;
-import java.security.Policy;
-import java.security.Principal;
-import java.security.PrivilegedAction;
-import java.security.ProtectionDomain;
-import java.util.Set;
-import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import javax.security.auth.Subject;
@@ -45,9 +39,11 @@ import org.glassfish.enterprise.iiop.api.ProtocolManager;
 import org.glassfish.hk2.api.PostConstruct;
 import org.jvnet.hk2.annotations.Service;
 
+import static java.util.logging.Level.FINE;
+
 /**
- * This class provides has the helper methods to deal with the SecurityContext.
- * This represents the SecurityServiceImpl of V2
+ * This class provides has the helper methods to deal with the SecurityContext. This represents the SecurityServiceImpl
+ * of V2
  *
  * @author Nithya Subramanian
  */
@@ -62,29 +58,17 @@ public class SecurityContextUtil implements PostConstruct {
     public static final int STATUS_FAILED = 1;
     public static final int STATUS_RETRY = 2;
 
-
     private static final String IS_A = "_is_a";
-    private Policy policy;
 
     @Inject
     private GlassFishORBHelper orbHelper;
 
     @Inject
-    private SecurityMechanismSelector sms;
-
-    public SecurityContextUtil() {
-
-    }
+    private SecurityMechanismSelector securityMechanismSelector;
 
     @Override
     public void postConstruct() {
-        AccessController.doPrivileged(new PrivilegedAction<Object>() {
-            @Override
-            public Object run() {
-                policy = Policy.getPolicy();
-                return null;
-            }
-        });
+
     }
 
     /**
@@ -95,20 +79,19 @@ public class SecurityContextUtil implements PostConstruct {
      * @throws InvalidMechanismException
      * @throws InvalidIdentityTokenException
      */
-    public SecurityContext getSecurityContext(org.omg.CORBA.Object effective_target)
-        throws InvalidMechanismException, InvalidIdentityTokenException {
-        assert (orbHelper != null);
-        IOR ior = ((com.sun.corba.ee.spi.orb.ORB) orbHelper.getORB()).getIOR(effective_target, false);
+    public SecurityContext getSecurityContext(org.omg.CORBA.Object effective_target) throws InvalidMechanismException, InvalidIdentityTokenException {
+        IOR ior = ((ORB) orbHelper.getORB()).getIOR(effective_target, false);
+
         if (StubAdapter.isStub(effective_target)) {
             if (StubAdapter.isLocal(effective_target)) {
                 // XXX: Workaround for non-null connection object ri for local invocation.
-                ConnectionExecutionContext.setClientThreadID(Thread.currentThread().getId());
+                ConnectionExecutionContext.setClientThreadID(Thread.currentThread().threadId());
                 return null;
             }
         }
 
         try {
-            return sms.selectSecurityContext(ior);
+            return securityMechanismSelector.selectSecurityContext(ior);
         } catch (InvalidMechanismException | InvalidIdentityTokenException e) {
             throw e;
         } catch (SecurityMechanismException e) {
@@ -116,29 +99,26 @@ public class SecurityContextUtil implements PostConstruct {
         }
     }
 
-
     /**
      * This is called by the CSIv2 interceptor on the client after a reply is received.
      *
-     * @param reply_status the reply status from the call. The reply status field could indicate an
-     *            an authentication retry. The following is the mapping of PI status
-     *            to the reply_status field
-     *            PortableInterceptor::SUCCESSFUL -> STATUS_PASSED
-     *            PortableInterceptor::SYSTEM_EXCEPTION -> STATUS_FAILED
-     *            PortableInterceptor::USER_EXCEPTION -> STATUS_PASSED
-     *            PortableInterceptor::LOCATION_FORWARD -> STATUS_RETRY
-     *            PortableInterceptor::TRANSPORT_RETRY -> STATUS_RETRY
+     * @param reply_status the reply status from the call. The reply status field could indicate an an authentication retry.
+     * The following is the mapping of PI status to the reply_status field PortableInterceptor::SUCCESSFUL -> STATUS_PASSED
+     * PortableInterceptor::SYSTEM_EXCEPTION -> STATUS_FAILED PortableInterceptor::USER_EXCEPTION -> STATUS_PASSED
+     * PortableInterceptor::LOCATION_FORWARD -> STATUS_RETRY PortableInterceptor::TRANSPORT_RETRY -> STATUS_RETRY
      * @param effective_target the effective_target field of the PI ClientRequestInfo object.
      */
     public static void receivedReply(int reply_status, org.omg.CORBA.Object effective_target) {
         if (reply_status == STATUS_FAILED) {
-            LOG.log(Level.FINE, "Failed status");
+            LOG.log(FINE, "Failed status");
             // what kind of exception should we throw?
             throw new RuntimeException("Target did not accept security context");
-        } else if (reply_status == STATUS_RETRY) {
-            LOG.log(Level.FINE, "Retry status");
+        }
+
+        if (reply_status == STATUS_RETRY) {
+            LOG.log(FINE, "Retry status");
         } else {
-            LOG.log(Level.FINE, "Passed status");
+            LOG.log(FINE, "Passed status");
         }
     }
 
@@ -151,74 +131,72 @@ public class SecurityContextUtil implements PostConstruct {
      * @return the status
      */
     public int setSecurityContext(SecurityContext context, byte[] object_id, String method, Socket socket) {
-        LOG.log(Level.FINE, "ABOUT TO EVALUATE TRUST");
+        LOG.log(FINE, "ABOUT TO EVALUATE TRUST");
 
         try {
             // First check if the client sent the credentials
             // as required by the object's CSIv2 policy.
             // evaluateTrust will throw an exception if client did not
             // conform to security policy.
-            SecurityContext ssc = sms.evaluateTrust(context, object_id, socket);
-
-            Class cls = null;
-            Subject s = null;
-            if (ssc == null) {
+            SecurityContext securityContext = securityMechanismSelector.evaluateTrust(context, object_id, socket);
+            if (securityContext == null) {
                 return STATUS_PASSED;
             }
-            if (ssc.authcls == null) {
-                cls = ssc.identcls;
+
+            Class<?> credentialClass = null;
+            if (securityContext.authcls == null) {
+                credentialClass = securityContext.identcls;
             } else {
-                cls = ssc.authcls;
+                credentialClass = securityContext.authcls;
             }
-            s = ssc.subject;
 
             // Authenticate the client. An Exception is thrown if login fails.
             // SecurityContext is set on current thread if login succeeds.
-            authenticate(s, cls);
+            authenticate(securityContext.subject, credentialClass);
 
             // Authorize the client for non-EJB objects.
             // Auth for EJB objects is done in BaseContainer.preInvoke().
             if (authorizeCORBA(object_id, method)) {
                 return STATUS_PASSED;
             }
+
             return STATUS_FAILED;
         } catch (Exception e) {
             if (!method.equals(IS_A)) {
-                LOG.log(Level.FINE, "Authentication Exception", e);
+                LOG.log(FINE, "Authentication Exception", e);
             }
+
             return STATUS_FAILED;
         }
     }
 
-    // return true if authorization succeeds, false otherwise.
+    // Return true if authorization succeeds, false otherwise.
     private boolean authorizeCORBA(byte[] object_id, String method) throws Exception {
-
         // Check if target is an EJB
-        ProtocolManager protocolMgr = orbHelper.getProtocolManager();
+        ProtocolManager protocolManager = orbHelper.getProtocolManager();
+
         // Check to make sure protocolMgr is not null.
         // This could happen during server initialization or if this call
         // is on a callback object in the client VM.
-        if (protocolMgr == null) {
+        if (protocolManager == null) {
             return true;
         }
-        if (protocolMgr.getEjbDescriptor(object_id) != null) {
+
+        if (protocolManager.getEjbDescriptor(object_id) != null) {
             return true; // an EJB object
-
         }
-        CORBAObjectPermission perm = new CORBAObjectPermission("*", method);
 
-        // Create a ProtectionDomain for principal on current thread.
-        com.sun.enterprise.security.SecurityContext sc = com.sun.enterprise.security.SecurityContext.getCurrent();
-        Set principalSet = sc.getPrincipalSet();
-        Principal[] principals = (principalSet == null ? null : (Principal[]) principalSet.toArray(new Principal[principalSet.size()]));
-        CodeSource cs = new CodeSource(new java.net.URL("file://"), (java.security.cert.Certificate[]) null);
-        ProtectionDomain prdm = new ProtectionDomain(cs, null, null, principals);
+        com.sun.enterprise.security.SecurityContext securityContext = com.sun.enterprise.security.SecurityContext.getCurrent();
 
         // Check if policy gives principal the permissions
-        boolean result = policy.implies(prdm, perm);
+        boolean result = PolicyFactory.getPolicyFactory()
+                                      .getPolicy()
+                                      .implies(
+                                          new CORBAObjectPermission("*", method),
+                                          securityContext.getPrincipalSet());
 
-        LOG.log(Level.FINE, "CORBA Object permission evaluation result={0} for method={1}",
-            new Object[] {result, method});
+        LOG.log(FINE, "CORBA Object permission evaluation result={0} for method={1}", new Object[] { result, method });
+
         return result;
     }
 
@@ -246,13 +224,9 @@ public class SecurityContextUtil implements PostConstruct {
     /**
      * Authenticate the user with the specified subject and credential class.
      */
-    private void authenticate(Subject s, Class cls) throws SecurityMechanismException {
+    private void authenticate(Subject subject, Class<?> credentialClass) throws SecurityMechanismException {
         try {
-            PrivilegedAction<Void> action = () -> {
-                LoginContextDriver.login(s, cls);
-                return null;
-            };
-            AccessController.doPrivileged(action);
+            LoginContextDriver.login(subject, credentialClass);
         } catch (Exception e) {
             throw new SecurityMechanismException("Cannot login user: " + e.getMessage(), e);
         }
